--- a/demo_pr1/public/index.html
+++ b/demo_pr1/public/index.html
@@ -24,11 +24,105 @@
           <span>wipro digital</span>
         </h2>
             <span flex></span>
-            <h5> about </h5>
-            <h5> courses </h5>
-            <h5> register </h5>
+            <md-button class="md-primary">HOME</md-button>
+            <md-button class="md-primary">ABOUT</md-button>
+            <md-button class="md-primary">COURSES</md-button>
+            <md-button class="md-primary">REGISTER</md-button>
         </div>
     </md-toolbar>
+    <div layout-xs="hide">
+        <img src="img/imgcenter.jpg" height="600px" width="100%" alt="No preview available">
+    </div>
+    <div ng-cloak>
+        <md-content class="md-padding" layout-xs="column" layout="row">
+            <div flex-xs flex-gt-xs="50" layout="column">
+                <md-card>
+                    <img ng-src="{{imagePath}}" class="md-card-image" alt="Washed Out">
+                    <md-card-title>
+                        <md-card-title-text>
+                            <span class="md-headline">Icon action buttons</span>
+                        </md-card-title-text>
+                    </md-card-title>
+                    <md-card-content>
+                        <p>
+                            The titles of Washed Out's breakthrough song and the first single from Paracosm share the two most important words in Ernest Greene's musical language: feel it.
+                        </p>
+                    </md-card-content>
+                    <!-- <md-card-actions layout="row" layout-align="end center">
+                        <md-button class="md-icon-button" aria-label="Favorite">
+                            <md-icon md-svg-icon="img/icons/favorite.svg"></md-icon>
+                        </md-button>
+                        <md-button class="md-icon-button" aria-label="Settings">
+                            <md-icon md-svg-icon="img/icons/menu.svg"></md-icon>
+                        </md-button>
+                        <md-button class="md-icon-button" aria-label="Share">
+                            <md-icon md-svg-icon="img/icons/share-arrow.svg"></md-icon>
+                        </md-button>
+                    </md-card-actions> -->
+                </md-card>
+            </div>
+            <div flex-xs flex-gt-xs="50" layout="column">
+                <md-card>
+                    <img ng-src="{{imagePath}}" class="md-card-image" alt="Washed Out">
+                    <md-card-title>
+                        <md-card-title-text>
+                            <span class="md-headline">Icon action buttons</span>
+                        </md-card-title-text>
+                    </md-card-title>
+                    <md-card-content>
+                        <p>
+                            The titles of Washed Out's breakthrough song and the first single from Paracosm share the two most important words in Ernest Greene's musical language: feel it.
+                        </p>
+                    </md-card-content>
+                </md-card>
+            </div>
+            <div flex-xs flex-gt-xs="50" layout="column">
+                <md-card>
+                    <img ng-src="{{imagePath}}" class="md-card-image" alt="Washed Out">
+                    <md-card-title>
+                        <md-card-title-text>
+                            <span class="md-headline">Icon action buttons</span>
+                        </md-card-title-text>
+                    </md-card-title>
+                    <md-card-content>
+                        <p>
+                            The titles of Washed Out's breakthrough song and the first single from Paracosm share the two most important words in Ernest Greene's musical language: feel it.
+                        </p>
+                    </md-card-content>
+                </md-card>
+            </div>
+            <div flex-xs flex-gt-xs="50" layout="column">
+                <md-card>
+                    <img ng-src="{{imagePath}}" class="md-card-image" alt="Washed Out">
+                    <md-card-title>
+                        <md-card-title-text>
+                            <span class="md-headline">Icon action buttons</span>
+                        </md-card-title-text>
+                    </md-card-title>
+                    <md-card-content>
+                        <p>
+                            The titles of Washed Out's breakthrough song and the first single from Paracosm share the two most important words in Ernest Greene's musical language: feel it.
+                        </p>
+                    </md-card-content>
+                </md-card>
+            </div>
+        </md-content>
+    </div>
+    <div class="aboutus" layout-wrap>
+        <div>
+            <h2 layout-align="center center">ABOUT US</h2>
+            <p>
+                Earth's lithosphere is divided into several rigid tectonic plates that migrate across the surface over periods of many millions of years. About 71% of Earth's surface is covered with water, mostly by its oceans.[32] The remaining 29% is land consisting of continents and islands that together have many lakes, rivers and other sources of water that contribute to the hydrosphere. The majority of Earth's polar regions are covered in ice, including the Antarctic ice sheet and the sea ice of the Arctic ice pack. Earth's interior remains active with a solid iron inner core, a liquid outer core that generates the Earth's magnetic field, and a convecting mantle that drives plate tectonics.
+            </p>
+        </div>
+        <div>
+            <md-button class="md-accent md-raised md-hue-1">READ MORE</md-button>
+        </div>
+    </div>
+    <footer>
+        <md-divider></md-divider>
+        <p>Copyright © 2017 Wipro Digital. All rights reserved.Privacy Policy Terms of Use Legal Site Map</p>
+    </footer>
     <!--Angular JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.4/angular-material.js"></script>
