--- a/page1_demo/index.html
+++ b/page1_demo/index.html
@@ -8,6 +8,7 @@
     <!-- Mobile viewport optimized -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <!-- Bootstrap CSS -->
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto+Mono">
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="includes/css/bootstrap-glyphicons.css" rel="stylesheet">
     <!-- Custom CSS -->
@@ -28,7 +29,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">wipro digital</a>
+                <a class="navbar-brand" href="/"><b>wipro</b> digital</a>
                 <div class="navbar-collapse collapse navbar-responsive-collapse">
                     <ul class="nav navbar-nav pull-right">
                         <li><a href="#"> Home </a></li>
@@ -85,7 +86,7 @@
                 <div class="item active" id="slide1">
                     <div class="carousel-caption">
                         <h4> Explore </h4>
-                        <p> Enter the world of information </p>
+                        <p> Enter the world of Technology </p>
                     </div>
                     <!-- carousel caption ends -->
                 </div>
@@ -93,15 +94,15 @@
                 <div class="item" btn-largeid="slide2">
                     <div class="carousel-caption">
                         <h4> Experience </h4>
-                        <p> Enjoy the magic of audio-visual explaination </p>
+                        <p> Enjoy the magic of Learn N Build </p>
                     </div>
                     <!-- carousel caption ends -->
                 </div>
                 <!-- item div ends -->
                 <div class="item" id="slide3">
                     <div class="carousel-caption">
-                        <h4> Facts n Philosophies </h4>
-                        <p> Accquire immense knowledge about everything </p>
+                        <h4> Develop </h4>
+                        <p> Turn ideas into real business solutions </p>
                     </div>
                     <!-- carousel caption ends -->
                 </div>
@@ -314,11 +315,11 @@
                 <div class="thumbnails row">
                     <div class="col-sm-3">
                         <div class="thumbnail">
-                            <img src="images/book2.jpg" alt="No image found">
+                            <img src="images/cr2.jpg" alt="No image found">
                             <!-- <div class="label label-success price"><span class="glyphicon glyphicon-tag"></span><sup>$</sup>39</div> -->
                             <div class="caption">
-                                <h3>Immersive Training Programme!</h3>
-                                <p> Get all the information you wanted delivered at your doorstep- Life-long! </p>
+                                <h3>Immersive Training Programme</h3>
+                                <p> 12 weeks of dedicated training programme to hone your skills! </p>
                                 <p><a href="#" target="_blank" class="btn btn-primary btn-small">Hurry</a> <a href="#" target="_blank" class="btn btn-link btn-small">Learn More</a></p>
                             </div>
                             <!-- caption ends -->
@@ -327,11 +328,11 @@
                     </div>
                     <div class="col-sm-3">
                         <div class="thumbnail">
-                            <img src="images/book2.jpg" alt="No image found">
+                            <img src="images/cr4.png" alt="No image found">
                             <!-- <div class="label label-success price"><span class="glyphicon glyphicon-tag"></span><sup>$</sup>39</div> -->
                             <div class="caption">
-                                <h3>Hybrid Training Programme!</h3>
-                                <p> Get all the information you wanted delivered at your doorstep- Life-long! </p>
+                                <h3>Hybrid Training Programme</h3>
+                                <p> Facing issues to get release? Try 8 weeks of intensive training! </p>
                                 <p><a href="#" target="_blank" class="btn btn-primary btn-small">Hurry</a> <a href="#" target="_blank" class="btn btn-link btn-small">Learn More</a></p>
                             </div>
                             <!-- caption ends -->
@@ -341,11 +342,11 @@
                     <!-- col-3 ends -->
                     <div class="col-sm-3">
                         <div class="thumbnail">
-                            <img src="images/dis2.jpg" alt="No image found">
+                            <img src="images/cr3.jpg" alt="No image found">
                             <!-- <div class="label label-info price"><span class="glyphicon glyphicon-tag"></span>Free</div> -->
                             <div class="caption">
-                                <h3>Products</h3>
-                                <p> Win a free trip to disneyland, Florida USA </p>
+                                <h3>Faculty</h3>
+                                <p> Have a look at the people who drive the programme passionately! </p>
                                 <p><a href="#" target="_blank" class="btn btn-primary btn-small">Hurry</a> <a href="#" target="_blank" class="btn btn-link btn-small">Learn More</a></p>
                             </div>
                             <!-- caption ends -->
@@ -354,11 +355,11 @@
                     </div>
                     <div class="col-sm-3">
                         <div class="thumbnail">
-                            <img src="images/dis2.jpg" alt="No image found">
+                            <img src="images/cr5.jpg" alt="No image found">
                             <!-- <div class="label label-info price"><span class="glyphicon glyphicon-tag"></span>Free</div> -->
                             <div class="caption">
-                                <h3>Faculty</h3>
-                                <p> Win a free trip to disneyland, Florida USA </p>
+                                <h3>Products</h3>
+                                <p> Where ideas turn into real business solutions! </p>
                                 <p><a href="#" target="_blank" class="btn btn-primary btn-small">Hurry</a> <a href="#" target="_blank" class="btn btn-link btn-small">Learn More</a></p>
                             </div>
                             <!-- caption ends -->
@@ -367,11 +368,39 @@
                     </div>
                     <!-- col-3 ends -->
                 </div>
+                <hr>
                 <!-- row ends -->
             </div>
             <!-- col-12 -->
         </div>
         <!-- moreCourses end -->
+        <div class="row" id="news">
+            <div class="col-sm-6">
+                <span class="glyphicon glyphicon-list-alt glyphc"></span>
+                <h2>News</h2>
+                <ul class="list-group">
+                    <li class="list-group-item"><img class="pull-left img-responsive" src="images/n3.jpg" alt="Image not found"><span><p>May 25, 2017<br>Nanopore Technology Makes Leap from DNA Sequencing to Identifying Proteins</p><span></li>
+                    <li class="list-group-item"><img class="pull-left img-responsive" src="images/n1.png" alt="Image not found"><span><p>May 18, 2017<br>Researchers Find Computer Code that Volkswagen Used to Cheat Emissions Tests</p></span></li>
+                    <li class="list-group-item"><img class="pull-left img-responsive" src="images/n2.jpg" alt="Image not found"><span><p>May 11, 2017<br>CSE Alumnus Leverages Machine Learning to Help Companies (and Hometown) Grow</p></span></li>
+                    <li class="list-group-item"><img class="pull-left img-responsive" src="images/n4.png" alt="Image not found"><span><p>May 5, 2017<br>Digital Department Honored for Efforts to Ensure Innovative Training</p></span></li>
+                </ul>
+            </div>
+            <!-- col-sm-6 -->
+            <div class="col-sm-6">
+                <span class="glyphicon glyphicon-calendar glyphcol"></span>
+                <h2>Events Calender</h2>
+                <ul class="list-group">
+                    <li class="list-group-item"><span class="glyphicon glyphicon-calendar"></span>Wave 9 graduation....<span><a href="#" target="_blank" class="btn btn-link btn-small">Read More</a></span></li>
+                    <li class="list-group-item"><span class="glyphicon glyphicon-calendar"></span>Induction Programme for new cadets...<span><a href="#" target="_blank" class="btn btn-link btn-small">Read More</a></span></li>
+                    <li class="list-group-item"><span class="glyphicon glyphicon-calendar"></span>Wipro Digital - All Hands Meet...<span><a href="#" target="_blank" class="btn btn-link btn-small">Read More</a></span>
+                        <br>
+                        <button type="button" class="btn btn-info btn-md">SEE ALL EVENTS</button>
+                    </li>
+                </ul>
+            </div>
+            <!-- col-sm-6 -->
+        </div>
+        <!-- news ends -->
     </div>
     <!-- main container div ends -->
     <footer>
